# fastapi-authorization-gateway

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: publish.yaml  test.yaml
docs/: howto.md  tutorial.md
fastapi_authorization_gateway/: __init__.py  auth.py  helpers.py  permissions.py  search.py  types.py  utils.py
fastapi_authorization_gateway/tests/integration/: example_app.py  test_app_integration.py
fastapi_authorization_gateway/tests/permissions/: test_param_matching.py  test_permission_for_route.py  test_route_matching.py
fastapi_route_authorization/: auth.py  example.py  example_app.py  helpers.py  middleware.py  permissions.py  search.py  types.py
fastapi_route_authorization/tests/integration/: example_app.py  test_app_integration.py
fastapi_route_authorization/tests/permissions/: test_param_matching.py  test_permission_for_route.py  test_route_matching.py
stac_fastapi_authorization/: auth.py  example.py  helpers.py  permissions.py  search.py  types.py  utils.py
tests/integration/: example_app.py  test_app_integration.py
tests/permissions/: test_param_matching.py  test_permission_for_route.py  test_route_matching.py
